--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ repositories {
 
 jar {
     manifest {
-        attributes "Main-Class": "hexlet.code.App"
+        attributes "Main-Class": "hexlet.code.Application"
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from {
