--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -1,8 +1,8 @@
-server:
-  port: ${PORT:5001}
+#server:
+#  port: ${PORT:5001}
 
 base-url: /
 
-spring:
-  application:
-    name: Application
+#spring:
+#  application:
+#    name: Application
