--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ jar {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
