--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -6,3 +6,5 @@ base-url: /
 spring:
   application:
     name: TaskTracker
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yml
