--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -8,3 +8,10 @@ spring:
     name: TaskTracker
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yml
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
