--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,34 @@ dependencies {
 			'org.springframework.boot:spring-boot-starter-data-jpa',
 			'com.h2database:h2',
 	)
+
+	runtimeOnly (
+			'com.h2database:h2',
+			'org.postgresql:postgresql:42.6.0'
+	)
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+liquibase {
+	activities {
+		main {
+			// Указываем путь, по которому будет сгенерирован файл миграции
+			changelogFile 'src/main/resources/db/changelog/db.changelog-master.yml'
+			// Указывем источник, с которым будут сравниваться изменения
+			// Это база данных, изначально она пустая
+			url 'jdbc:h2:./taskDB'
+			// Сравниваем с моделями, задавая пакет
+			referenceUrl 'hibernate:spring:hexlet.code.model.' +
+					// Указываем диалект
+					'?dialect=org.hibernate.dialect.H2Dialect' +
+					// Указываем правила именования таблиц и столбцов,
+					// чтобы они соответствовали правилам Spring
+					'&hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy'
+		}
+	}
 }
 
 diffChangelog{
