--- a/app/Makefile
+++ b/app/Makefile
@@ -1,5 +1,5 @@
 setup:
-	gradle wrapper --gradle-version 7.4
+	gradle wrapper --gradle-version 7.3
 
 clean:
 	./gradlew clean
@@ -8,16 +8,16 @@ build:
 	./gradlew clean build
 
 start:
-	APP_ENV=development ./gradlew run
+	./gradlew bootRun --args='--spring.profiles.active=dev'
+
+start-prod:
+	./gradlew bootRun --args='--spring.profiles.active=prod'
 
 install:
-	./gradlew install
+	./gradlew installDist
 
 start-dist:
-	APP_ENV=production ./build/install/app/bin/app
-
-generate-migrations:
-	./gradlew generateMigrations
+	./build/install/app/bin/app
 
 lint:
 	./gradlew checkstyleMain checkstyleTest
@@ -31,10 +31,51 @@ report:
 check-updates:
 	./gradlew dependencyUpdates
 
-image-build:
-	docker build -t hexletcomponents/app:latest .
+generate-migrations:
+	gradle diffChangeLog
 
-image-push:
-	docker push hexletcomponents/app:latest
+db-migrate:
+	./gradlew update
+
 
 .PHONY: build
+#setup:
+#	gradle wrapper --gradle-version 7.4
+#
+#clean:
+#	./gradlew clean
+#
+#build:
+#	./gradlew clean build
+#
+#start:
+#	APP_ENV=development ./gradlew run
+#
+#install:
+#	./gradlew install
+#
+#start-dist:
+#	APP_ENV=production ./build/install/app/bin/app
+#
+#generate-migrations:
+#	./gradlew generateMigrations
+#
+#lint:
+#	./gradlew checkstyleMain checkstyleTest
+#
+#test:
+#	./gradlew test
+#
+#report:
+#	./gradlew jacocoTestReport
+#
+#check-updates:
+#	./gradlew dependencyUpdates
+#
+#image-build:
+#	docker build -t hexletcomponents/app:latest .
+#
+#image-push:
+#	docker push hexletcomponents/app:latest
+#
+#.PHONY: build
