--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,27 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.1'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation(
+			'org.springframework.boot:spring-boot-starter-data-jpa',
+			'org.springframework.boot:spring-boot-starter-web',
+			'org.springframework.boot:spring-boot-starter-actuator',
+			'org.springframework.boot:spring-boot-starter-validation',
+			'org.springframework.boot:spring-boot-starter-security',
+			'io.jsonwebtoken:jjwt:0.9.1',
+			// Зависимость для swagger
+			// Позволяет сгенерировать и проматривать интерактивную документацию по API
+			'org.springdoc:springdoc-openapi-ui:1.7.0',
+			'org.liquibase:liquibase-core',
+			'com.querydsl:querydsl-jpa:5.0.0:jakarta',
+			'com.rollbar:rollbar-spring-boot-webmvc:1.10.0'
+	)
+
+
+	annotationProcessor(
+			'org.projectlombok:lombok',
+			'com.querydsl:querydsl-apt:5.0.0:jakarta',
+			'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	)
 
 	liquibaseRuntime(
 			sourceSets.main.output,
