--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 			'org.springframework.boot:spring-boot-starter-web',
 			'org.springframework.boot:spring-boot-starter-actuator',
 			'org.springframework.boot:spring-boot-starter-validation',
-			'org.springframework.boot:spring-boot-starter-security',
+//			'org.springframework.boot:spring-boot-starter-security',
 			'io.jsonwebtoken:jjwt:0.9.1',
 			// Зависимость для swagger
 			// Позволяет сгенерировать и проматривать интерактивную документацию по API
@@ -59,7 +59,7 @@ dependencies {
 			'org.liquibase:liquibase-core',
 			'com.querydsl:querydsl-jpa:5.0.0:jakarta',
 			'com.rollbar:rollbar-spring-boot-webmvc:1.10.0',
-			'org.modelmapper:modelmapper:2.1.1'
+//			'org.modelmapper:modelmapper:2.1.1'
 	)
 
 
