--- a/app/src/main/resources/config/application-dev.yml
+++ b/app/src/main/resources/config/application-dev.yml
@@ -7,12 +7,12 @@ spring:
     username: ""
     password: ""
     url: "jdbc:h2:./taskDB"
-  h2:
-    console:
-      enabled: true
-      path: /h2console/
-      settings:
-        web-allow-others: true
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2console/
+#      settings:
+#        web-allow-others: true
   jpa:
     show-sql: true
 
