--- a/app/src/main/resources/config/application-prod.yml
+++ b/app/src/main/resources/config/application-prod.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     username: ${PGUSER}
     password: ${PGPASSWORD}
-    url: ${DATABASE_URL}
+    url: "jdbc:" + ${DATABASE_URL}
 #    username: ""
 #    password: ""
-#    url: "jdbc:h2:./taskDB"
+#    url: "jdbc:h2:./taskDB"s
